compiler/src/test/resources/amyc/typer/failing/ConstructorError2.amy
module ConstructorError
  abstract class Foo 
  case class Bar(i: Int) : Foo
  case class Baz(i: Int, t: Foo) : Foo

  Baz(1, Baz(1, 2))
end ConstructorError
